--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "better-sqlite3": "^11.10.0",
     "csurf": "^1.11.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
